memberbaiki/menambahkan fitur untuk bisa menambahkan gambar dan memperbaiki dev server dan lainnya

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -7,10 +7,13 @@
     <title>Kosong</title>
 </head>
 
+
 <body>
-
-    <h1>Hello World</h1>
-
+    <div class="section">
+        <div class="title">
+            <h1 class="sub-title"><span class="you">Before I met you</span> <br> I never knew what it was like to be able to look at <br> someone and smile for no reason</h1>
+        </div>
+    </div>
 </body>
 
 </html>
